1998-12-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* callbacks.c (view_changed_cb): add accelerator labels
 	to menu paths. also fix group type item activation code
	to work in a cleaner way and respect possible tear off
	item.
	* main.c (main): add accelerator labels to menu paths.
	* gtkhex.[ch]: small fixes.
	
1998-12-13  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c, hex_document.c: fixed some cast warnings.
	* gtkhex.c: fixed size_allocate and size_request handlers.
	fixed positioning of hex and ascii view and display size
	recalculation.
	
1998-12-10  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* callbacks.c (about_destroy_cb): new callback. sets
	a pointer to the about dialog to NULL on its destruction.
	(about_cb): if the about dialog is already open, raise it
	instead of opening a new one.

1998-12-10  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (main): fix arg parsing code. it actually works now.
	* ui.c, ghex.h (report_error, show_message): removed.
	* callbacks.c (customize_app_cb): use gnome-appbar instead of
	gtkstatusbar.
	also converted all report_error()s to gnome_app_error()s and
	show_message()s to gnome_app_flash()es.
	* config.c (load_configuration): removed error report about
	not being able to load the font, as we might have no windows
	at the time this is called.
	
1998-12-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c, hex-document.c: add hint strings to menu descriptions.
	* callbacks.c (customize_app_cb): new function that inserts
	a statusbar and installs menu hints.
	(view_changed_cb): install hints for child's menus.
	* main.c: connect customize_app_cb to app_created signal.
	
1998-12-04  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (main): fixed initial toplevel window opening so
	that it works nice with session managment.

1998-12-03  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c ([ascii|hex]_[button|motion]_cb): fixed some
	scrolling bugs.
